# learning

./: .pre-commit-config.yaml  README.md
.agents/skills/author-course/: SKILL.md
.github/workflows/: instruqt.yml
courses/advanced-concepts-track-89hzln/: config.yml  track.yml
courses/fastmcp-foundations/: config.yml  track.yml
courses/fastmcp-interactive-apps/: build-assets  config.yml  track.yml
courses/fastmcp-interactive-apps/asset-sources/project-dashboard-bootstrap/project-dashboard-template/: README.md  pyproject.toml
courses/fastmcp-interactive-apps/asset-sources/project-dashboard-bootstrap/project-dashboard-template/project_dashboard/: helpers.py
courses/fastmcp-interactive-apps/asset-sources/project-dashboard-bootstrap/project-dashboard-template/project_dashboard/data/: metrics.json  projects.json
courses/integrations-track-k2seyl/: config.yml  track.yml
courses/prefect-accelerated-learning/: config.yml  track.yml
courses/prefect-foundations/: config.yml  track.yml
courses/prefect-parallelism-concurrency/: build-assets  config.yml  track.yml
courses/prefect-parallelism-concurrency/asset-sources/quacksync/: README.md  mock_server.py  pyproject.toml
courses/prefect-parallelism-concurrency/asset-sources/quacksync/quacksync/: __init__.py  database.py  flow.py  profile.py  scoring.py  tasks.py
courses/prefect-parallelism-concurrency/asset-sources/quacksync/quacksync/snapshots/: flow_module_2_start.py  flow_module_3_start.py  flow_module_4_start.py  flow_module_5_start.py  flow_module_6_start.py
scripts/: build-course-assets.sh
(+111 files in other folders)
