[project]
name = "quacksync"
version = "0.1.0"
description = "QuackSync: the running project for Scaling Workflows with Prefect"
requires-python = ">=3.10"
dependencies = [
  "prefect>=3.0.0",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "numpy>=1.26",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quacksync"]
