[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "project-dashboard"
version = "0.1.0"
description = "Starter project for the FastMCP interactive apps course."
requires-python = ">=3.12"
dependencies = [
  "fastmcp[apps]==3.2.0",
  "prefab-ui==0.18.2",
]

[tool.setuptools.packages.find]
include = ["project_dashboard*"]
